--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.21.1",
     "graphdb-js": "^1.0.2",
     "nodemon": "^2.0.7",
+    "sparql-http-client": "^2.2.3",
     "sparqling-star": "^1.1.0"
   }
 }
